--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "metro-select",
-  "version": "1.0.17",
+  "version": "1.1.0",
   "main": "metro-select.js",
+  "description": "A select box replacement for the web inspired by Zune.",
   "dependencies": {
     "grunt-contrib-jshint": "^1.1.0",
     "jquery": "*",
