--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.2",
   "main": "metro-select.js",
   "description": "A select box replacement for the web inspired by Zune.",
+  "scripts": {
+    "build": "grunt "
+  },
   "dependencies": {
     "grunt-contrib-jshint": "^1.1.0",
     "jquery": "*",
