--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "build": "grunt "
   },
   "dependencies": {
-    "grunt-contrib-jshint": "^1.1.0",
-    "jquery": "*",
-    "jshint": "^2.9.4",
-    "jss": "git+https://github.com/Box9/jss.git"
+    "jquery": "^3.5.1",
+    "jss": "git://github.com/Box9/jss.git"
   },
   "devDependencies": {
-    "grunt": "^1.0.1"
+    "grunt": "^1.3.0",
+    "grunt-contrib-jshint": "^3.0.0",
+    "jshint": "^2.12.0"
   }
 }
